exports[`use all parts of svg-edit > check tool_source_set #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
 </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_path #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <path d="m50,50l100,50l-25,100l-75,-150z" fill="#FF0000" id="svg_1" opacity="0.5" stroke="#000000" stroke-width="5">
   <animate attributeName="opacity" begin="indefinite" dur="0.2" fill="freeze" to="1"/>
  </path>
 </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_path_change_node_xy #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <path d="m75,75l75,25l-25,100l-50,-125z" fill="#FF0000" id="svg_1" stroke="#000000" stroke-width="5"/>
 </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_path_openclose #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <path d="m75,75l75,25l-25,100l-50,-125z" fill="#FF0000" id="svg_1" stroke="#000000" stroke-width="5"/>
 </g>
</svg>
`;
